Modified gitignore to Ignore Database.yml

--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -1,5 +1,6 @@
 <h1>Sign In/ Register</h1>
 <p>Find me in app/views/user/login.html.erb</p>
+<p><%= @time %></p>
 
 <div class="form_login">
 	<%= form_tag(:action => 'login') do %>
