--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,44 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Library Management System</title>
+</head>
+<body>
+	<div>
+		<h1>Library Management System</h1>
+	</div>
+	<div>
+		<p>Time: <%= @time %></p>
+		<p>Date: <%= @date %></p>
+		<p>Logged in as <%= @logged_user.username %></p>
+		<ul>
+			<%= link_to "logout", home_logout_path, 
+				:confirm => "Are you sure you want to Logout?"
+			%>
+			<%= link_to "Add Item", home_add_item_path %>
+		</ul>
+	</div>
+	<div>
+		<!-- Stock-->
+		<div class="row">
+			<div class="col">
+				<ul>
+					<li>
+						Books
+					</li>
+					<li>
+						CDs/DVDs
+					</li>
+					<li>
+						Journals
+					</li>
+				</ul>
+			</div>
+			<div class="col">
+				<p>Item Description</p>
+			</div>
+		</div>
+	</div>
+
+</body>
+</html>
