all actions done with navigation

--- a/app/views/home/add_user.html.erb
+++ b/app/views/home/add_user.html.erb
@@ -4,6 +4,11 @@
 	<title> Add New Users</title>
 </head>
 <body>
+
+<%= link_to "Home", home_index_path %>
+<%= link_to "Add Item", home_add_item_path %>
+<%= link_to "Logout", home_logout_path %>
+
 	<h2>Add User Form</h2>
 
 	<%= form_for(:user, :url => {:controller => 'home', :action => 'add_user'}) do %>
@@ -26,7 +31,7 @@
 			 	<tr>
 			 		<td>&nbsp;</td>
 			 		<td> <%= submit_tag('Add User') %> </td>
-			 		
+
 			 	</tr>
 
 			</table>
