--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,6 +35,7 @@
 					<tr>
 						<th>Item Name</th>
 						<th>Item Category</th>
+						<th>Item Description</th>
 					</tr>
 					<% @items.each do |item| %>
 						<tr>
@@ -43,9 +44,6 @@
 						</tr>
 					<% end %>
 				</table>
-			</div>
-			<div class="col">
-				<p>Item Description</p>
 			</div>
 		</div>
 	</div>
