--- a/app/views/home/add_item.html.erb
+++ b/app/views/home/add_item.html.erb
@@ -5,6 +5,11 @@
 	<title>Add Item</title>
 </head>
 <body>
+
+<%= link_to "Home", home_index_path %>
+<%= link_to "Add User", home_add_user_path %>
+<%= link_to "Logout", home_logout_path %>
+
 	<h1>Fill in the Details to add an Item</h1>
 	<%= form_for(:item, :url => {:controller => 'home', :action => 'add_item'}) do %>
 		<label for="item_name">Item Name</label>
