--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,32 +5,15 @@
 </head>
 <body>
 	<div>
-		<h1>Library Management System</h1>
-	</div>
-	<div>
-		<p>Time: <%= @time %></p>
-		<p>Date: <%= @date %></p>
-		<p>Logged in as <%= @logged_user.username %></p>
-		<ul>
-
-			<%= link_to "logout", home_logout_path, 
-				:confirm => "Are you sure you want to Logout?"
-			%>
-
-			<% if @logged_user.user_role == 'Administrator' %>
-
-	      		<%= link_to "Add Item", home_add_item_path %>
-	      		<%= link_to "Add User", home_add_user_path %>
-
-      		<% end %>
-    
-
-		</ul>
-	</div>
-	<div>
-		<!-- Stock-->
+		<!-- Items-->
 		<div class="row">
 			<div class="col">
+				<ul class="nav nav-tabs">
+					<li class="active"><a href="#books" data-toggle="tab">Books</a></li>
+					<li><a href="#cds" data-toggle="tab">CDs/DVDs</a></li>
+					<li><a href="#journals" data-toggle="tab">Journals</a></li>
+					<li><a href="#laptops" data-toggle="tab">Laptops</a></li>
+				</ul>
 				<table>
 					<tr>
 						<th>Item Name</th>
@@ -44,6 +27,22 @@
 						</tr>
 					<% end %>
 				</table>
+			</div>
+		</div>
+
+		<!-- Category i -->
+		<div class="tab-content">
+			<div class="tab-pane fade in active" id="books">
+				<p>Hello Books</p>
+			</div>
+			<div class="tab-pane fade" id="cds">
+				<p>Hello CDs/DVDs</p>
+			</div>
+			<div class="tab-pane fade" id="journals">
+				<p>Hello Journals</p>
+			</div>
+			<div class="tab-pane fade" id="laptops">
+				<p>Hello Laptops</p>
 			</div>
 		</div>
 	</div>
