--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,103 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <title>LibrarySystem</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Library System</title>
+
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  	<%= csrf_meta_tags %>
+
+    <!-- Bootstrap Core CSS -->
+    <%= stylesheet_link_tag "bootstrap/bootstrap.min" %>
+
+    <!-- Custom CSS -->
+    <style>
+    body {
+        padding-top: 70px;
+        /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    }
+    </style>
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
 </head>
+
 <body>
 
-<%= yield %>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Library Management System</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
+             	<input type="text" placeholder="Search" />
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+        <div class="row">
+        	<div class="col-lg-3 col-md-3 col-sm-3">
+        		<p class="btn btn-primary">Logged in as <%= @logged_user.username %></p>
+        	</div>
+        	<div class="col-lg-3 col-md-3 col-sm-3 pull-right">
+        		<%= link_to "logout", home_logout_path, 
+				:confirm => "Are you sure you want to Logout?"
+				%>
+        	</div>
+        	<div class="col-lg-3 col-md-3 col-sm-3 pull-right">
+        		<p>Date: <%= @date %></p>
+        	</div>        	
+        </div>
+        <!-- /.row -->
+        <div class="row">
+            <div class="col-lg-12 text-center">
+			<% if @logged_user.user_role == 'Administrator' %>
+				<%= link_to "Home", home_index_path %>
+	      		<%= link_to "Add Item", home_add_item_path %>
+	      		<%= link_to "Add User", home_add_user_path %>
+
+      		<% end %>
+            </div>
+        </div>
+        <!-- /.row -->
+        <%= yield %>
+
+    </div>
+    <!-- /.container -->
+
+    <!-- jQuery Version 1.11.1 -->
+    <%= javascript_include_tag "bootstrap/jquery" %>
+
+    <!-- Bootstrap Core JavaScript -->
+    <%= javascript_include_tag "bootstrap/bootstrap.min" %>
 
 </body>
+
 </html>
+
