--- a/app/views/user/login.html.erb
+++ b/app/views/user/login.html.erb
@@ -3,13 +3,7 @@
 
 <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
-                            <h1><strong>Bootstrap</strong> Login Form</h1>
-                            <div class="description">
-                            	<p>
-	                            	This is a free responsive login form made with Bootstrap. 
-	                            	Download it on <a href="http://azmind.com"><strong>AZMIND</strong></a>, customize and use it as you like!
-                            	</p>
-                            </div>
+                            
                         </div>
                     </div>
                     <div class="row">
@@ -24,33 +18,19 @@
                         		</div>
                             </div>
                             <div class="form-bottom">
-			                    <%= form_tag({:action => 'login'},:class => "login-form", :role => "form") do %>
+			                    <%= form_tag :action => 'login', :class => "login-form", :role => "form" do %>
 			                    	<div class="form-group">
-			                    		<label class="sr-only" for="form-username">Username</label>
-			                        	<input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="form-username">
+			                    		<label for="form-username">Username</label>
+			                        	<!-- <input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="form-username"> -->
+			                        	<%= text_field_tag :username %>
 			                        </div>
 			                        <div class="form-group">
-			                        	<label class="sr-only" for="form-password">Password</label>
-			                        	<input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
+			                        	<label for="form-password">Password</label>
+			                        	<!-- <input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password"> -->
+			                        	<%= password_field_tag :password %>
 			                        </div>
-			                        <button type="submit" class="btn">Sign in!</button>
+			                        <%= submit_tag 'Sign In' %>
 			                 	<% end %>
 		                    </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3 social-login">
-                        	<h3>...or login with:</h3>
-                        	<div class="social-login-buttons">
-	                        	<a class="btn btn-link-1 btn-link-1-facebook" href="#">
-	                        		<i class="fa fa-facebook"></i> Facebook
-	                        	</a>
-p	                        	<a class="btn btn-link-1 btn-link-1-twitter" href="#">
-	                        		<i class="fa fa-twitter"></i> Twitter
-	                        	</a>
-	                        	<a class="btn btn-link-1 btn-link-1-google-plus" href="#">
-	                        		<i class="fa fa-google-plus"></i> Google Plus
-	                        	</a>
-                        	</div>
                         </div>
                     </div>
