--- a/app/views/home/add_item.html.erb
+++ b/app/views/home/add_item.html.erb
@@ -1,16 +1,10 @@
 
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Add Item</title>
-</head>
-<body>
 
 	<h2 class="page-header">Fill in the Details to add an Item</h2>
 	<%= form_for(:item, :url => {:controller => 'home', :action => 'add_item'}) do %>
 		<div class="form-group">
 			<%#= label_tag("Item Category") %>
-			<%= select_tag(:item_category, options_for_select([['Category',nil],'Books','CDs/DVDs','Journals/Magazines']), :class => "form-control") %>	
+			<%= select_tag(:item_category_id, options_for_select([['Category',nil],['Books','1'],['CDs/DVDs','2'],['Journals/Magazines','3']]), :class => "form-control") %>	
 		</div>
 		<div class="form-group">
 			<%#= label_tag("Item Name") %>
@@ -40,17 +34,16 @@
 			<%#= label_tag("Serial") %>
 			<%= text_field_tag(:serial, nil, :placeholder => "Serial", :class => "form-control") %>
 		</div>
+		<!-- To be included in the Delete Action 
 		<div class="form-group">
 			<%#= label_tag("Void") %>
-			<%= text_field_tag(:void, nil, :placeholder => "Void", :class => "form-control") %>
+			<%#= text_field_tag(:void, nil, :placeholder => "Void", :class => "form-control") %>
 		</div>
 		<div class="form-group">
 			<%#= label_tag("Void Reason") %>
-			<%= text_area_tag(:void_reason, nil, :placeholder => "Void Reason", :class => "form-control") %>
+			<%#= text_area_tag(:void_reason, nil, :placeholder => "Void Reason", :class => "form-control") %>
 		</div>
+		-->
 		<%= submit_tag("Add Item", :class => "btn btn-success") %>
 	<% end %>
 
-
-</body>
-</html>
