--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,23 +36,25 @@
 </head>
 
 <body>
-
+    
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">Library Management System</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
-             	<input type="text" placeholder="Search" />
+            <div classs="row">
+                <div class="col-lg-3 col-md-3 col-sm-3 navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Library Management System</a>
+                </div>
+                <!-- Search Bar -->
+                <div class="col-lg-3 col-md-3 col-sm-3 collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
+                    <input type="text" placeholder="Search" />
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -62,13 +64,23 @@
     <!-- Page Content -->
     <div class="container">
         <div class="row">
-        	<div class="col-lg-3 col-md-3 col-sm-3">
-        		<p class="btn btn-primary">Logged in as <%= @logged_user.username %></p>
-        	</div>
-        	<div class="col-lg-3 col-md-3 col-sm-3 pull-right">
-        		<%= link_to "logout", home_logout_path, 
-				:confirm => "Are you sure you want to Logout?"
-				%>
+        	<div class="col-lg-3 col-md-3 col-sm-3 dropdown"> <!-- Not finished -->
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" id="userMenu">
+                        Logged in as <%= @logged_user.username %> <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" role="menu" aria-labelledby="userMenu">
+                        <li role="presentation">
+                            <a role="menuitem" tab-index="-1" href="#">Profile</a>
+                        </li>
+                        <li role="presentation">
+                            <a role="menuitem" tab-index="-1" href="#">Settings</a>
+                        </li>
+                        <li role="presentation">
+                            <a role="menuitem" tab-index="-1" href="#">
+                                <%= link_to "logout", home_logout_path, :confirm => "Are you sure you want to Logout?" %>
+                            </a>
+                        </li>
+                    </ul>       		
         	</div>
         	<div class="col-lg-3 col-md-3 col-sm-3 pull-right">
         		<p>Date: <%= @date %></p>
