Items table interface added to system trial 1

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,6 +36,8 @@
 									<td><%= item.edition %></td>
 									<% if @logged_user.user_role == 'Administrator' %>
 										<td>Am admin</td>
+										<% else %>
+										<td> Am staff</td>
 						      		<% end %>
 								</tr>
 							<% end %>
