--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,13 +16,13 @@
 		<div class="tab-content">
 			<div class="tab-pane fade in active" id="books">
 				<div class="table-responsive">
-					<table class="table">
+					<table class="table table-striped">
 						<caption>
 							Item Table
 						</caption>
 						<thead>
 							<tr>
-								<th>Name</th>
+								<th><span class="glyphicon glyphicon-user"></span> Name</th>
 								<th>Author</th>
 								<th>Edition</th>
 								<th>Action</th>
@@ -35,9 +35,22 @@
 									<td><%= item.author %></td>
 									<td><%= item.edition %></td>
 									<% if @logged_user.user_role == 'Administrator' %>
-										<td>Am admin</td>
+										<!-- Admin actions to an item-->
+										<td>
+											<button class="btn btn-sm btn-danger">
+												<span class="glyphicon glyphicon-close"></span> Delete
+											</button>
+											<button class="btn btn-sm btn-success">
+												<span class="glyphicon glyphicon-edit"></span> Edit</button>
+											<button class="btn btn-sm btn-warning">Borrow</button>
+										</td>
 										<% else %>
-										<td> Am staff</td>
+										<!-- Staff actions to an item -->
+										<td>
+											<button class="btn btn-sm btn-info">Preview</button>
+											<button class="btn btn-sm btn-success">Borrow</button>
+											<button class="btn btn-sm btn-warning">Book</button>
+										</td>
 						      		<% end %>
 								</tr>
 							<% end %>
