--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,82 +1,58 @@
 
 	<div>
-		<!-- Items-->
-		<div class="row">
-			<div class="col">
-				<ul class="nav nav-tabs">
-					<li class="active"><a href="#books" data-toggle="tab">Books</a></li>
-					<li><a href="#cds" data-toggle="tab">CDs/DVDs</a></li>
-					<li><a href="#journals" data-toggle="tab">Journals</a></li>
-					<li><a href="#laptops" data-toggle="tab">Laptops</a></li>
-				</ul>
-			</div>
-		</div>
 
 		<!-- Category i -->
-		<div class="tab-content">
-			<div class="tab-pane fade in active" id="books">
 				<div class="table-responsive">
 					<table class="table table-striped">
+						<!--
 						<caption>
 							Item Table
 						</caption>
+						-->
 						<thead>
 							<tr>
 								<th><span class="glyphicon glyphicon-user"></span> Name</th>
+								<th>Category</th>
 								<th>Author</th>
 								<th>Edition</th>
 								<th>Action</th>
 							</tr>
 						</thead>
 						<tbody>
-							<% @items.where(:item_category_id => 1).each do |item| %>
+							<% @items.each do |item| %>
 								<tr>
+
+									<td><%= item.item_category_id %></td>
 									<td><%= item.item_name %></td>
 									<td><%= item.author %></td>
 									<td><%= item.edition %></td>
+
 									<% if @logged_user.user_role == 'Administrator' %>
 										<!-- Admin actions to an item-->
 										<td>
-											<button class="btn btn-sm btn-danger">
-												<span class="glyphicon glyphicon-close"></span> Delete
-											</button>
-											<button class="btn btn-sm btn-success">
-												<span class="glyphicon glyphicon-edit"></span> Edit</button>
-											<button class="btn btn-sm btn-warning">Borrow</button>
+											<div class="btn-group">
+												<button class="btn btn-sm btn-danger">
+													<span class="glyphicon glyphicon-close"></span> Delete
+												</button>
+												<button class="btn btn-sm btn-success">
+													<span class="glyphicon glyphicon-edit"></span> Edit</button>
+												<button class="btn btn-sm btn-warning">Borrow</button>
+											</div>
 										</td>
-										<% else %>
+									<% else %>
 										<!-- Staff actions to an item -->
 										<td>
-											<button class="btn btn-sm btn-info">Preview</button>
-											<button class="btn btn-sm btn-success">Borrow</button>
-											<button class="btn btn-sm btn-warning">Book</button>
+											<div class="btn-group">
+												<button class="btn btn-sm btn-info">Preview</button>
+												<button class="btn btn-sm btn-success">Borrow</button>
+												<button class="btn btn-sm btn-warning">Book</button>
+											</div>
 										</td>
 						      		<% end %>
 								</tr>
 							<% end %>
-						</tbody>						
-					</table>					
-				</div>
 
-			</div>
-			<div class="tab-pane fade" id="cds">
-				<% @items.where(:item_category_id => 2).each do |item| %>
-					<tr>
-						<td><%= item.item_name %></td>
-						<td><%= item.item_category_id %></td>
-					</tr>
-				<% end %>
-			</div>
-			<div class="tab-pane fade" id="journals">
-				<% @items.where(:item_category_id => 3).each do |item| %>
-					<tr>
-						<td><%= item.item_name %></td>
-						<td><%= item.item_category_id %></td>
-					</tr>
-				<% end %>
-			</div>
-			<div class="tab-pane fade" id="laptops">
-				<p>Hello Laptops</p>
-			</div>
+						</tbody>						
+					</table>	
 		</div>
 	</div>
