added add category

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -115,6 +115,9 @@
                     <li>
                         <%= link_to "Add User", home_add_user_path, :class => "glyphicon glyphicon-plus" %>
                     </li>
+                    <li>
+                        <%= link_to "Add New Category", home_add_category_path, :class => "glyphicon glyphicon-plus" %>
+                    </li>
                 </ul>   				
             </nav>
         <% end %>
