Search placeholder clarified

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,7 +102,7 @@
             </div>        
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <%= form_tag do %>
-                    <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search" %>                    
+                    <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Search by title" %>                    
                 <% end %>
             </div>
         	<div class="col-lg-3 col-md-3 col-sm-3">
