Glyphicons added on action buttons

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -42,25 +42,62 @@
 									<td><%= item.author %></td>
 									<td><%= item.edition %></td>
 
+<div class="modal" id="void_reason" tabindex="-1" role="dialog" aria-labelledby="void_reason_label" aria-hidden="true" style="padding: 150px;">
+			<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true"> &times	</button>
+
+				  	<h4 class="modal-title" id="void_reason_label"> Void Reason</h4>
+				</div>
+
+				<div class="modal-body">
+				  <%= form_tag do %> 
+				  	<%= text_area_tag :void_reason, params[:void_params], :rows => 4, :cols => 60 %>
+				  <% end %>
+				  <%= item.item_category_id %>
+				</div>
+
+				<div class="modal-footer">
+					 <button type="button" class="btn btn-default" data-dismiss="modal"> Cancel </button>
+
+					 <button type="button" class="btn btn-danger"> Delete </button>
+
+				</div>
+			</div>
+		</div>
+	</div>
 									<% if @logged_user.user_role == 'Administrator' %>
 										<!-- Admin actions to an item-->
+
+
+
 										<td>
 											<div class="btn-group">
-												<button class="btn btn-sm btn-danger">
-													<span class="glyphicon glyphicon-close"></span> Delete
+												<button class="btn btn-sm btn-danger" data-toggle="modal" data-target="#void_reason">
+													<span class="glyphicon glyphicon-trash"></span> Delete
 												</button>
 												<button class="btn btn-sm btn-success">
-													<span class="glyphicon glyphicon-edit"></span> Edit</button>
-												<button class="btn btn-sm btn-warning">Borrow</button>
+													<span class="glyphicon glyphicon-edit"></span> Edit
+												</button>
+												<button class="btn btn-sm btn-warning">
+													<span class="glyphicon glyphicon-thumbs-up"></span> Borrow
+												</button>
 											</div>
 										</td>
 									<% else %>
 										<!-- Staff actions to an item -->
 										<td>
 											<div class="btn-group">
-												<button class="btn btn-sm btn-info">Preview</button>
-												<button class="btn btn-sm btn-success">Borrow</button>
-												<button class="btn btn-sm btn-warning">Book</button>
+												<button class="btn btn-sm btn-primary">
+													<span class="glyphicon glyphicon-eye-open"></span> Preview
+												</button>
+												<button class="btn btn-sm btn-success">
+													<span class="glyphicon glyphicon-edit"></span> Borrow
+												</button>
+												<button class="btn btn-sm btn-warning">
+													<span class="glyphicon glyphicon-calendar"></span> Book
+												</button>
 											</div>
 										</td>
 						      		<% end %>
@@ -72,4 +109,15 @@
 				</div>
 			</div>
 		</div>
+											
 	</div>
+
+	<!-- Void Reason Modal -->
+
+
+	
+
+
+<script type="text/javascript">
+$('void_reason').modal();
+</script>
