--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"> <font size = 14 style=""> Library Management System </font> </a>
+                    <a class="navbar-brand" href="#"> <font size = 14> Library Management System </font> </a>
                 </div>
                 <!-- Initial Search -->
                 <div class="collapse navbar-collapse" id="collapseable_navigation">
